네트워크 문제 ( 다시푸는중 )

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Network",
+            "request": "launch",
+            "mainClass": "인프런알고리즘강좌.Network",
+            "projectName": "algo"
+        },
+        {
+            "type": "java",
             "name": "Debug (Launch) - Current File",
             "request": "launch",
             "mainClass": "${file}"
