# 주말 문제풀이

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - test02",
+            "request": "launch",
+            "mainClass": "기타.test02",
+            "projectName": "algo"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - test01",
+            "request": "launch",
+            "mainClass": "기타.test01",
+            "projectName": "algo"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Programmers43163",
             "request": "launch",
             "mainClass": "프로그래머스.Programmers43163",
