--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - MiddleNumber",
+            "request": "launch",
+            "mainClass": "프로그래머스.MiddleNumber",
+            "projectName": "algo"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Calendar",
             "request": "launch",
             "mainClass": "프로그래머스.Calendar",
