:sparkles: 알고리즘 강좌 100 ( 11,12, 13 문제풀이 )

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,27 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Solve013",
+            "request": "launch",
+            "mainClass": "인프런알고리즘강좌.Solve013",
+            "projectName": "algo"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Solve012",
+            "request": "launch",
+            "mainClass": "인프런알고리즘강좌.Solve012",
+            "projectName": "algo"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Solve011",
+            "request": "launch",
+            "mainClass": "인프런알고리즘강좌.Solve011",
+            "projectName": "algo"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Solve010",
             "request": "launch",
             "mainClass": "인프런알고리즘강좌.Solve010",
