:sparkles: 석차구하기 문제풀이

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Solve025",
+            "request": "launch",
+            "mainClass": "인프런알고리즘강좌.Solve025",
+            "projectName": "algo"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Solve024",
             "request": "launch",
             "mainClass": "인프런알고리즘강좌.Solve024",
